# Meteo.ESP32

./: .gitignore  CMakeLists.txt  Makefile  README.md  meteo_model.mwb  package-lock.json  partitions_custom.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ADCChannel/: ADCChannel.cpp  ADCChannel.h
components/button/: Kconfig
components/ino_uart/: CMakeLists.txt  ino_uart.c  ino_uart.h
components/lampwm/: .eil.yml  CMakeLists.txt  lampwm.c  lampwm.h
components/list/: CMakeLists.txt
components/mics6814/: CMakeLists.txt  Kconfig  component.mk  mics6814.c  mics6814.cpp  mics6814.h
components/radsens/: .eil.yml  CMakeLists.txt  radsens.c  radsens.h
components/ssd1306/: CMakeLists.txt  fonts.h  ssd1306.c  ssd1306.h
components/valve/: .eil.yml  CMakeLists.txt  valve.c  valve.h
components/wifi-manager/: CMakeLists.txt  Kconfig  component.mk  dist
components/wifi-manager/include/: flash.h  flashrw.h  http_client.h  http_handlers.h  http_server.h  list.h  manager.h  ntp_client.h  spiffs.h  storage.h
components/wifi-manager/src/: apache_ca.pem  awk  dns_server.c  flash.c  flashrw.c  http_app.c  http_app.h  http_client.c  http_handlers.c  http_server.c  httpclient.c  httpclient.h  https_certs.h  index.html  list.c  manager.c  ntp_client.c  ota.c  sources  spiffs.c  storage.c  wifi_manager.c  wifi_manager.h
components/wifi-manager/ui/: code.js  index.html  timezones.html  timezones.sh
components/ze08ch20/: CMakeLists.txt  component.mk  ze08ch2o.c  ze08ch2o.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h  tasks.c  tasks.h
(+172 files in other folders)
